--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+
+[[bin]]
+name="iterOverBytes"
+path="src/iterationOverBytes.rs"
+
+[[bin]]
+name="struct"
+path="src/structsAndImpl.rs"
