--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,19 @@ path="src/compilerDirective.rs"
 [[bin]]
 name="enum"
 path="src/enums.rs"
+
+[[bin]]
+name="method"
+path="src/methods.rs"
+
+[[bin]]
+name="ranges"
+path="src/rangeType.rs"
+
+[[bin]]
+name="generics"
+path="src/GenericIntro.rs"
+
+[[bin]]
+name="recursion"
+path="src/recursion.rs"
