--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,3 +69,19 @@ path="src/exercise3.rs"
 [[bin]]
 name="enums"
 path="src/enums.rs"
+
+[[bin]]
+name="iflet"
+path="src/if-let-let-else.rs"
+
+[[bin]]
+name="exe4"
+path="src/exercise4.rs"
+
+[[bin]]
+name="generic"
+path="src/generic.rs"
+
+[[bin]]
+name="exe5"
+path="src/exercise5.rs"
