Back from break ctd Traits with Recap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -149,3 +149,8 @@ path="src/traitObjects.rs"
 [[bin]]
 name="tc"
 path="src/traits3Constants.rs"
+
+[[bin]]
+name="tc2"
+path="src/traitsContd.rs"
+
